--- a/css/site.css
+++ b/css/site.css
@@ -1,12 +1,16 @@
-.navbar{
-    background-color:powderblue;
-}
-.navbar-brand{
-    color:darkgreen;
-}
-.navbar-nav>li>a{
-    color:darkgreen;
-}
 body{
-    background-color:palegreen;
+    background-color:#005A31;
+    color:#F3FAB6;
+}
+.panel-body p{
+    color: black;
+}
+.navbar-inverse {
+    background-color:#A8CD1B;
+}
+.navbar-inverse .navbar-brand {
+    color:black;
+}
+.navbar-inverse .navbar-nav>li>a {
+    color:black;
 }
