--- a/css/site.css
+++ b/css/site.css
@@ -1,19 +1,27 @@
+html {
+    height: 100%;
+}
 body{
-    background-color:#005A31;
-    color:#F3FAB6;
+    background: linear-gradient(to bottom, #ffffff 25%, #ccffcc 75%);
+    color:#005A31;
+    height: 100%;
+    margin: 0;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 .panel-body p{
     color: black;
 }
-.navbar-inverse {
+/*.navbar-inverse {
     background-color:#A8CD1B;
-}
-.navbar-inverse .navbar-brand {
+    
+}*/
+/*.navbar-inverse .navbar-brand {
     color:black;
 }
 .navbar-inverse .navbar-nav>li>a {
     color:black;
-}
+}*/
 a{
     color:black;
 }
@@ -25,4 +33,119 @@ a{
 }
 .nav-tabs.nav-justified>.active>a, .nav-tabs.nav-justified>.active>a:focus, .nav-tabs.nav-justified>.active>a:hover {
     background-color:lightblue;
+}
+
+.navbar-custom {
+  background-color: #3a7843;
+  border-color: #2f6237;
+  background-image: -webkit-gradient(linear, left 0%, left 100%, from(#4b9a56), to(#3a7843));
+  background-image: -webkit-linear-gradient(top, #4b9a56, 0%, #3a7843, 100%);
+  background-image: -moz-linear-gradient(top, #4b9a56 0%, #3a7843 100%);
+  background-image: linear-gradient(to bottom, #4b9a56 0%, #3a7843 100%);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff4b9a56', endColorstr='#ff3a7843', GradientType=0);
+}
+.navbar-custom .navbar-brand {
+  color: #ffffff;
+}
+.navbar-custom .navbar-brand:hover,
+.navbar-custom .navbar-brand:focus {
+  color: #e6e6e6;
+  background-color: transparent;
+}
+.navbar-custom .navbar-text {
+  color: #ffffff;
+}
+.navbar-custom .navbar-nav > li:last-child > a {
+  border-right: 1px solid #2f6237;
+}
+.navbar-custom .navbar-nav > li > a {
+  color: #ffffff;
+  border-left: 1px solid #2f6237;
+}
+.navbar-custom .navbar-nav > li > a:hover,
+.navbar-custom .navbar-nav > li > a:focus {
+  color: #fafafa;
+  background-color: transparent;
+}
+.navbar-custom .navbar-nav > .active > a,
+.navbar-custom .navbar-nav > .active > a:hover,
+.navbar-custom .navbar-nav > .active > a:focus {
+  color: #fafafa;
+  background-color: #2f6237;
+  background-image: -webkit-gradient(linear, left 0%, left 100%, from(#2f6237), to(#40844a));
+  background-image: -webkit-linear-gradient(top, #2f6237, 0%, #40844a, 100%);
+  background-image: -moz-linear-gradient(top, #2f6237 0%, #40844a 100%);
+  background-image: linear-gradient(to bottom, #2f6237 0%, #40844a 100%);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff2f6237', endColorstr='#ff40844a', GradientType=0);
+}
+.navbar-custom .navbar-nav > .disabled > a,
+.navbar-custom .navbar-nav > .disabled > a:hover,
+.navbar-custom .navbar-nav > .disabled > a:focus {
+  color: #cccccc;
+  background-color: transparent;
+}
+.navbar-custom .navbar-toggle {
+  border-color: #dddddd;
+}
+.navbar-custom .navbar-toggle:hover,
+.navbar-custom .navbar-toggle:focus {
+  background-color: #dddddd;
+}
+.navbar-custom .navbar-toggle .icon-bar {
+  background-color: #cccccc;
+}
+.navbar-custom .navbar-collapse,
+.navbar-custom .navbar-form {
+  border-color: #2e6036;
+}
+.navbar-custom .navbar-nav > .dropdown > a:hover .caret,
+.navbar-custom .navbar-nav > .dropdown > a:focus .caret {
+  border-top-color: #fafafa;
+  border-bottom-color: #fafafa;
+}
+.navbar-custom .navbar-nav > .open > a,
+.navbar-custom .navbar-nav > .open > a:hover,
+.navbar-custom .navbar-nav > .open > a:focus {
+  background-color: #2f6237;
+  color: #fafafa;
+}
+.navbar-custom .navbar-nav > .open > a .caret,
+.navbar-custom .navbar-nav > .open > a:hover .caret,
+.navbar-custom .navbar-nav > .open > a:focus .caret {
+  border-top-color: #fafafa;
+  border-bottom-color: #fafafa;
+}
+.navbar-custom .navbar-nav > .dropdown > a .caret {
+  border-top-color: #ffffff;
+  border-bottom-color: #ffffff;
+}
+@media (max-width: 767) {
+  .navbar-custom .navbar-nav .open .dropdown-menu > li > a {
+    color: #ffffff;
+  }
+  .navbar-custom .navbar-nav .open .dropdown-menu > li > a:hover,
+  .navbar-custom .navbar-nav .open .dropdown-menu > li > a:focus {
+    color: #fafafa;
+    background-color: transparent;
+  }
+  .navbar-custom .navbar-nav .open .dropdown-menu > .active > a,
+  .navbar-custom .navbar-nav .open .dropdown-menu > .active > a:hover,
+  .navbar-custom .navbar-nav .open .dropdown-menu > .active > a:focus {
+    color: #fafafa;
+    background-color: #2f6237;
+  }
+  .navbar-custom .navbar-nav .open .dropdown-menu > .disabled > a,
+  .navbar-custom .navbar-nav .open .dropdown-menu > .disabled > a:hover,
+  .navbar-custom .navbar-nav .open .dropdown-menu > .disabled > a:focus {
+    color: #cccccc;
+    background-color: transparent;
+  }
+}
+.navbar-custom .navbar-link {
+  color: #ffffff;
+}
+.navbar-custom .navbar-link:hover {
+  color: #fafafa;
 }
