--- a/css/site.css
+++ b/css/site.css
@@ -72,6 +72,7 @@ a{
 .application{
   margin-top: 25px;
   border-bottom:1px solid black !important;
+  border-spacing: 10px;
 }
 
 .navbar-custom {
